Profile editing section

--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -18,7 +18,7 @@
 			<nav id="nav" class="navbar navbar-inverse navbar-static-top" >
 				<div class="navbar-inner">
 					<div class="pull-left">
-						<a class="brand" href="#header">Musée de Kourou</a>
+						<a class="brand" href="{{ path('musee_accueil') }}">Musée de Kourou</a>
 					</div>
 				
 					<div class="container fluid">
@@ -30,7 +30,8 @@
 							<li><a href="{{ path('musee_aPropos') }}">À propos</a></li>
 							<li><a href="{{ path('musee_infosPratiques') }}">Infos pratiques</a></li>
 							<li><a href="{{ path('musee_contact') }}">Contact</a></li>
-							<li><a href="{{ path('musee_pageEnregistrementAdmin') }}">Admin</a></li>
+							<li><a href="{{ path('musee_profil') }}">Profil</a></li>
+							<li><a href="{{ path('musee_create_user_admin') }}">Admin</a></li>
 								
 								
 						</ul>
