--- a/src/Musee/UserBundle/Resources/views/User/registrationChercheur.html.twig
+++ b/src/Musee/UserBundle/Resources/views/User/registrationChercheur.html.twig
@@ -7,7 +7,7 @@
 			<div class="offset2 span4">
 				<ul class="nav nav-tabs">
 					<li class="active">
-					<a href="{{ path('musee_pageEnregistrementAdmin') }}">Enregistrer</a>
+					<a href="{{ path('musee_create_user_admin') }}">Enregistrer</a>
 					</li>
 					<li><a href="{{ path('musee_modif_user_liste', {'page' : 1}) }}">Modifier</a></li>
 					<li><a href="{{ path('musee_suppr_user_liste', {'page' : 1}) }}">Supprimer</a></li>
