--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -30,9 +30,11 @@
 							<li><a href="{{ path('musee_aPropos') }}">À propos</a></li>
 							<li><a href="{{ path('musee_infosPratiques') }}">Infos pratiques</a></li>
 							<li><a href="{{ path('musee_contact') }}">Contact</a></li>
-
+							{% if is_granted('ROLE_ADHERENT') %}
 							<li><a href="{{ path('musee_profil') }}">Profil</a></li>
-								
+							{% elseif is_granted('ROLE_CHERCHEUR') %}
+							<li><a href="{{ path('musee_profil') }}">Profil</a></li>
+							{% endif %}
 
 							{% if is_granted('ROLE_ADMIN') %}
 							<li><a href="{{ path('musee_create_user_admin') }}">Admin</a></li>
