--- a/src/Musee/SiteBundle/Resources/views/Site/index.html.twig
+++ b/src/Musee/SiteBundle/Resources/views/Site/index.html.twig
@@ -30,9 +30,9 @@
 			</div>
 			<div class="span3 well text-center">
 				<div class="btn-group btn-group-vertical">
-					<a class="btn btn-primary" href="{{ path('musee_aPropos') }}">Tout savoir sur le<br /> Musée de l'espace de Kourou</a>
-					<a class="btn btn-danger" href="{{ path('musee_infosPratiques') }}">Infos pratiques</a>
-					<a class="btn btn-inverse" href="{{ path('musee_contact') }}">Contactez-nous</a>
+					<a class="btn btn-primary btn-large" href="{{ path('musee_aPropos') }}">Tout savoir sur le<br /> Musée de l'espace de Kourou</a>
+					<a class="btn btn-warning btn-large" href="{{ path('musee_infosPratiques') }}">Infos pratiques</a>
+					<a class="btn btn-danger btn-large" href="{{ path('musee_contact') }}">Contactez-nous</a>
 				</div>
 			</div>
 		</div>
