--- a/src/Musee/UserBundle/Resources/views/User/activationEmail.html.twig
+++ b/src/Musee/UserBundle/Resources/views/User/activationEmail.html.twig
@@ -1,8 +1,8 @@
 <html>
 
 {% block body %}
-	<p>Bienvenu {{user.email}}
-	<p>Cliquez sur le lien suivant pour activer votre compte</p>
+	Bienvenu {{user.email}}
+	Cliquez sur le lien suivant pour activer votre compte
 	{{confirmationUrl}}
 	
 	
