--- a/web/style/style.css
+++ b/web/style/style.css
@@ -29,3 +29,11 @@ body
 	text-indent:25px;
 	text-align:justify;
 }
+
+#header
+{
+	margin-left: 0px;
+	margin-right: 0px;
+	padding-left: 0px;
+	margin-right: 0px;
+}
