--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -10,52 +10,64 @@
 		{% block stylesheets %}
 			 <link rel="stylesheet" href="{{ asset('bootstrap/css/bootstrap.css') }}" type="text/css" />
 			 <link rel="stylesheet" href="{{ asset('style/style.css') }}" type="text/css" />
+			 <link rel="stylesheet" href="{{ asset('bootstrap/css/bootstrap-responsive.css') }}" type="text/css" />
 		{% endblock %}
 	</head>
 	<body>
-		<div id="header">
-			<img alt="Banner" title="Earth" src="{{ asset('style/banner.png') }}">
-			<nav id="nav" class="navbar navbar-inverse navbar-static-top" >
-				<div class="navbar-inner">
-					<div class="pull-left">
-						<a class="brand" href="{{ path('musee_accueil') }}">Musée de Kourou</a>
-					</div>
-				
-					<div class="container fluid">
-						
-						<ul class="nav">
-							<li><a href="{{ path('musee_accueil') }}">Accueil</a></li>
-							<li><a href="{{ path('musee_blog_afficher_liste', {'page' : 1}) }}">Articles</a></li>
-							<li><a href="{{ path('musee_collection_plan') }}">Collection</a></li>
-							<li><a href="{{ path('musee_aPropos') }}">À propos</a></li>
-							<li><a href="{{ path('musee_infosPratiques') }}">Infos pratiques</a></li>
-							<li><a href="{{ path('musee_contact') }}">Contact</a></li>
-							{% if is_granted('ROLE_ADHERENT') %}
-							<li><a href="{{ path('musee_profil') }}">Profil</a></li>
-							{% elseif is_granted('ROLE_CHERCHEUR') %}
-							<li><a href="{{ path('musee_profil') }}">Profil</a></li>
-							{% endif %}
-
-							{% if is_granted('ROLE_ADMIN') %}
-							<li><a href="{{ path('musee_create_user_admin') }}">Admin</a></li>
-							{% endif %}
-
-								
-						</ul>
-
-						<div class="pull-right">
-							{% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
-								<a href="{{ path('logout') }}" class="btn btn-primary btn-small">Déconnexion</a>
-							{% else %}
-								<a href="{{ path('login') }}" class="btn btn-primary btn-small">Connexion</a>
-							{% endif %}
-						</div>
-
-					</div>
+		
+		
+				<div class="row-fluid" id="header">
+					<img alt="Banner" title="Earth" src="{{ asset('style/banner.png') }}">
 				</div>
-				
-			</nav>
-		</div>
+				<div class="row-fluid">
+					<nav id="nav" class="navbar navbar-inverse navbar-static-top"  >
+						<div class="navbar-inner">
+							<div class="pull-left">
+								<a class="brand" href="{{ path('musee_accueil') }}">Musée de Kourou</a>
+							</div>
+						
+							<div class="container fluid">
+								<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+									Menu
+								</a>
+								<div class="nav-collapse">
+								<ul class="nav">
+									<li><a href="{{ path('musee_accueil') }}">Accueil</a></li>
+									<li><a href="{{ path('musee_blog_afficher_liste', {'page' : 1}) }}">Articles</a></li>
+									<li><a href="{{ path('musee_collection_plan') }}">Collection</a></li>
+									<li><a href="{{ path('musee_aPropos') }}">À propos</a></li>
+									<li><a href="{{ path('musee_infosPratiques') }}">Infos pratiques</a></li>
+									<li><a href="{{ path('musee_contact') }}">Contact</a></li>
+									{% if is_granted('ROLE_ADHERENT') %}
+									<li><a href="{{ path('musee_profil') }}">Profil</a></li>
+									{% elseif is_granted('ROLE_CHERCHEUR') %}
+									<li><a href="{{ path('musee_profil') }}">Profil</a></li>
+									{% endif %}
+
+									{% if is_granted('ROLE_ADMIN') %}
+									<li><a href="{{ path('musee_create_user_admin') }}">Admin</a></li>
+									{% endif %}
+									</ul>
+								</div>
+
+										
+								
+
+								<div class="pull-right">
+									{% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
+										<a href="{{ path('logout') }}" class="btn btn-primary btn-small">Déconnexion</a>
+									{% else %}
+										<a href="{{ path('login') }}" class="btn btn-primary btn-small">Connexion</a>
+									{% endif %}
+								</div>
+
+							</div>
+						</div>
+						
+					</nav>
+				</div>
+			
+		
 	
 
 		{% block body %}
