--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -4,29 +4,31 @@
 <html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+		<meta name="viewport" content="user-scalable=no, initial-scale = 1, minimum-scale = 1, maximum-scale = 1, width=device-width">
  
 		<title>{% block title %}Musee{% endblock %}</title>
 		
 		{% block stylesheets %}
 			 <link rel="stylesheet" href="{{ asset('bootstrap/css/bootstrap.css') }}" type="text/css" />
-			 <link rel="stylesheet" href="{{ asset('style/style.css') }}" type="text/css" />
+			 
 			 <link rel="stylesheet" href="{{ asset('bootstrap/css/bootstrap-responsive.css') }}" type="text/css" />
+			 <link rel="stylesheet" href="{{ asset('style/style.css') }}" type="text/css" />
 		{% endblock %}
 	</head>
 	<body>
 		
 		
-				<div class="row-fluid" id="header">
+				<div class="row hidden-phone hidden-tablet" id="header">
 					<img alt="Banner" title="Earth" src="{{ asset('style/banner.png') }}">
 				</div>
-				<div class="row-fluid">
+				<div class="row">
 					<nav id="nav" class="navbar navbar-inverse navbar-static-top"  >
 						<div class="navbar-inner">
 							<div class="pull-left">
 								<a class="brand" href="{{ path('musee_accueil') }}">Musée de Kourou</a>
 							</div>
 						
-							<div class="container fluid">
+							<div class="container">
 								<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
 									Menu
 								</a>
