--- a/src/Musee/CollectionBundle/Resources/views/Collection/plan.html.twig
+++ b/src/Musee/CollectionBundle/Resources/views/Collection/plan.html.twig
@@ -38,15 +38,15 @@
 					</p>
 					<div class="span4 well text-center">
 						<div class="btn-group btn-group-vertical">
-							   <a class="btn btn-inverse" href="{{ path('musee_collection_afficher_liste', {'page' : 1, 'idSalle' : 1}) }}">Salle Mercure - Entrée</option>
-							   <a class="btn btn-inverse" href="{{ path('musee_collection_afficher_liste', {'page' : 1, 'idSalle' : 2}) }}">Salle Venus - Boutique</option>
-							   <a class="btn btn-inverse" href="{{ path('musee_collection_afficher_liste', {'page' : 1, 'idSalle' : 3}) }}">Salle Terre</option>
-							   <a class="btn btn-inverse" href="{{ path('musee_collection_afficher_liste', {'page' : 1, 'idSalle' : 4}) }}">Salle Mars</option>
-							   <a class="btn btn-inverse" href="{{ path('musee_collection_afficher_liste', {'page' : 1, 'idSalle' : 5}) }}">Salle Jupiter</option>
-							   <a class="btn btn-inverse" href="{{ path('musee_collection_afficher_liste', {'page' : 1, 'idSalle' : 6}) }}">Salle Saturne</option>
-							   <a class="btn btn-inverse" href="{{ path('musee_collection_afficher_liste', {'page' : 1, 'idSalle' : 7}) }}">Salle Uranus</option>
-							   <a class="btn btn-inverse" href="{{ path('musee_collection_afficher_liste', {'page' : 1, 'idSalle' : 8}) }}">Salle Neptune</option>
-							   <a class="btn btn-inverse" href="{{ path('musee_collection_afficher_liste', {'page' : 1, 'idSalle' : 9}) }}">Salle Soleil - Réserve</option>
+							   <a class="btn btn-inverse" href="{{ path('musee_collection_afficher_liste', {'page' : 1, 'idSalle' : 1}) }}">Salle Mercure - Entrée</a>
+							   <a class="btn btn-inverse" href="{{ path('musee_collection_afficher_liste', {'page' : 1, 'idSalle' : 2}) }}">Salle Venus - Boutique</a>
+							   <a class="btn btn-inverse" href="{{ path('musee_collection_afficher_liste', {'page' : 1, 'idSalle' : 3}) }}">Salle Terre</a>
+							   <a class="btn btn-inverse" href="{{ path('musee_collection_afficher_liste', {'page' : 1, 'idSalle' : 4}) }}">Salle Mars</a>
+							   <a class="btn btn-inverse" href="{{ path('musee_collection_afficher_liste', {'page' : 1, 'idSalle' : 5}) }}">Salle Jupiter</a>
+							   <a class="btn btn-inverse" href="{{ path('musee_collection_afficher_liste', {'page' : 1, 'idSalle' : 6}) }}">Salle Saturne</a>
+							   <a class="btn btn-inverse" href="{{ path('musee_collection_afficher_liste', {'page' : 1, 'idSalle' : 7}) }}">Salle Uranus</a>
+							   <a class="btn btn-inverse" href="{{ path('musee_collection_afficher_liste', {'page' : 1, 'idSalle' : 8}) }}">Salle Neptune</a>
+							   <a class="btn btn-inverse" href="{{ path('musee_collection_afficher_liste', {'page' : 1, 'idSalle' : 9}) }}">Salle Soleil - Réserve</a>
 						</div>
 					</div>
 				</div>
