--- a/src/Musee/CollectionBundle/Resources/views/Collection/plan.html.twig
+++ b/src/Musee/CollectionBundle/Resources/views/Collection/plan.html.twig
@@ -21,7 +21,7 @@
 					<p class="visible-desktop">
 						<map name="plan_du_musee" id="plan_du_musee">
 							<area shape="rect" coords="348,0,422,50" href="{{ path('musee_collection_afficher_liste', {'page' : 1, 'idSalle' : 1}) }}" alt="Salle Mercure - Entrée"/>
-							<area shape="rect" coords="250,51,669,246" href="{{ path('musee_collection_afficher_liste', {'page' : 1, 'idSalle' : 2}) }}" alt="Salle Venus - Boutique"/>
+							<area shape="rect" coords="250,51,669,246" href="{{ path('musee_collection_afficher_liste', {'page' : 1, 'idSalle' : 2}) }}" alt="Salle Vénus - Boutique"/>
 							<area shape="rect" coords="669,51,924,466" href="{{ path('musee_collection_afficher_liste', {'page' : 1, 'idSalle' : 3}) }}" alt="Salle Terre"/>
 							<area shape="rect" coords="250,248,668,467" href="{{ path('musee_collection_afficher_liste', {'page' : 1, 'idSalle' : 5}) }}" alt="Salle Jupiter"/>
 							<area shape="rect" coords="21,51,250,467" href="{{ path('musee_collection_afficher_liste', {'page' : 1, 'idSalle' : 8}) }}" alt="Salle Neptune"/>
@@ -39,7 +39,7 @@
 					<div class="span4 well text-center">
 						<div class="btn-group btn-group-vertical">
 							   <a class="btn btn-inverse" href="{{ path('musee_collection_afficher_liste', {'page' : 1, 'idSalle' : 1}) }}">Salle Mercure - Entrée</a>
-							   <a class="btn btn-inverse" href="{{ path('musee_collection_afficher_liste', {'page' : 1, 'idSalle' : 2}) }}">Salle Venus - Boutique</a>
+							   <a class="btn btn-inverse" href="{{ path('musee_collection_afficher_liste', {'page' : 1, 'idSalle' : 2}) }}">Salle Vénus - Boutique</a>
 							   <a class="btn btn-inverse" href="{{ path('musee_collection_afficher_liste', {'page' : 1, 'idSalle' : 3}) }}">Salle Terre</a>
 							   <a class="btn btn-inverse" href="{{ path('musee_collection_afficher_liste', {'page' : 1, 'idSalle' : 4}) }}">Salle Mars</a>
 							   <a class="btn btn-inverse" href="{{ path('musee_collection_afficher_liste', {'page' : 1, 'idSalle' : 5}) }}">Salle Jupiter</a>
