--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -18,10 +18,10 @@
 	<body>
 		
 		
-				<div class="row hidden-phone hidden-tablet" id="header">
+				<div class="row-fluid hidden-phone hidden-tablet" id="header">
 					<img alt="Banner" title="Earth" src="{{ asset('style/banner.png') }}">
 				</div>
-				<div class="row">
+				<div class="row-fluid">
 					<nav id="nav" class="navbar navbar-inverse navbar-static-top"  >
 						<div class="navbar-inner">
 							<div class="pull-left">
